--- a/index.html
+++ b/index.html
@@ -91,39 +91,16 @@
         <div class="container"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a>
             <div class="menu-toggle"><span></span></div>
             <ul class="header__actions">
-                <li><a class="ps-search-btn" href="#"><i class="exist-search"></i></a></li>
-                <li><a href="#"><i class="exist-user"></i></a></li>
-                <li><a class="ps-shopping" href="#"><i class="exist-minicart"></i><span><i>0</i></span></a></li>
+                <li><a class="" href="#"><i class=""></i></a></li>
+                <li><a href="#"><i class=""></i></a></li>
+                <li><a class="" href="#"><i class="exist-minicart"></i><span><i></i></span></a></li>
             </ul>
             <ul class="menu">
                 <li class="current-menu-item menu-item-has-children dropdown"><a href="index.html">Home</a>
-                    <ul class="sub-menu">
-                        <li><a href="index.html">Homepage #1</a></li>
-                        <li><a href="homepage-2.html">Homepage #2</a></li>
-                        <li><a href="homepage-3.html">Homepage #3</a></li>
-                        <li><a href="homepage-4.html">Homepage #4</a></li>
-                        <li><a href="homepage-5.html">Homepage #5</a></li>
-                        <li><a href="homepage-6.html">Homepage #6</a></li>
-                        <li><a href="homepage-7.html">Homepage #7</a></li>
-                        <li><a href="homepage-8.html">Homepage #8</a></li>
-                        <li><a href="homepage-9.html">Homepage #9</a></li>
-                        <li><a href="homepage-10.html">Homepage #10</a></li>
-                        <li><a href="homepage-11.html">Homepage #11</a></li>
-                        <li><a href="homepage-12.html">Homepage #12</a></li>
-                    </ul>
                 </li>
                 <li><a href="shop-pagination.html">Shop</a></li>
-                <li><a href="#">Pages</a></li>
-                <li><a href="#">Features</a></li>
-                <li class="menu-item-has-children dropdown"><a href="#">Blog</a>
-                    <ul class="sub-menu">
-                        <li class="menu-item-has-children dropdown"><a href="blog-grid.html">Blog-grid</a>
-                            <ul class="sub-menu">
-                                <li><a href="blog-grid.html">Blog Grid 1</a></li>
-                                <li><a href="blog-grid-2.html">Blog Grid 2</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="blog-list.html">Blog List</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact Us</a></li>
                     </ul>
                 </li>
             </ul>
