--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <ul class="header__actions">
                 <li><a class="" href="#"><i class=""></i></a></li>
                 <li><a href="#"><i class=""></i></a></li>
-                <li><a class="" href="#"><i class="exist-minicart"></i><span><i></i></span></a></li>
+                <li><a class="" href="#"><i class=""></i><span><i></i></span></a></li>
             </ul>
             <ul class="menu">
                 <li class="current-menu-item menu-item-has-children dropdown"><a href="index.html">Home</a>
