--- a/index.html
+++ b/index.html
@@ -195,22 +195,22 @@
                     <div class="grid-sizer"></div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="#">Cigarette BOX</a><img class="ps-fullwidth" src="images/shop/category-1.jpg" alt=""></div>
+                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="shop-category-Cigarbox.html">Cigarette BOX</a><img class="ps-fullwidth" src="images/shop/category-1.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="#">T-Shirt</a><img class="ps-fullwidth" src="images/shop/category-2.jpg" alt=""></div>
+                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="shop-category-Tshirt.html">T-Shirt</a><img class="ps-fullwidth" src="images/shop/category-2.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="#">Hoodie & Sweatshirt</a><img class="ps-fullwidth" src="images/shop/category-3.jpg" alt=""></div>
+                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="shop-category-Hoodie&sweatshirt.html">Hoodie & Sweatshirt</a><img class="ps-fullwidth" src="images/shop/category-3.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="#">Accesories</a><img class="ps-fullwidth" src="images/shop/category-4.jpg" alt=""></div>
+                            <div class="ps-collection--bottom"><a class="ps-collection__morelink" href="shop-category-Accesories.html">Accesories</a><img class="ps-fullwidth" src="images/shop/category-4.jpg" alt=""></div>
                         </div>
                     </div>
                     </div>
