--- a/shop-category-Cigarbox.html
+++ b/shop-category-Cigarbox.html
@@ -54,7 +54,9 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
-                
+                <div class="right">
+                    <div class="menu-toggle"><span></span></div>
+                    <ul class="header__actions">
             </div>
         </nav>
     </header>
