--- a/shop-category-Cigarbox.html
+++ b/shop-category-Cigarbox.html
@@ -47,7 +47,7 @@
                 <div class="left"><a class="ps-logo" href="index.html"><img src="images/logo.png" alt=""></a></div>
                 <div class="center">
                     <ul class="menu">
-                        <li class="menu-item-has-children dropdown"><a href="index.html">Home</a>
+                        <li class=""><a href="index.html">Home</a>
                         </li>
                         <li><a href="shop-pagination.html">Shop</a></li>
                         <li><a href="#">About Us</a></li>
