--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <li><a class="" href="#"><i class=""></i><span><i></i></span></a></li>
             </ul>
             <ul class="menu">
-                <li class="current-menu-item menu-item-has-children dropdown"><a href="index.html">Home</a>
+                <li class=""><a href="index.html">Home</a>
                 </li>
                 <li><a href="shop-pagination.html">Shop</a></li>
                 <li><a href="#">About Us</a></li>
