--- a/shop-category-Tshirt.html
+++ b/shop-category-Tshirt.html
@@ -12,10 +12,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href="apple-touch-icon.png" rel="apple-touch-icon">
     <link href="favicon.png" rel="icon">
-    <meta name="author" content="Nghia Minh Luong">
+    <meta name="author" content="Edgarizky">
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <title>Exist</title>
+    <title>BOOZOŃ - Depressed But Well Dressed</title>
     <!-- Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700%7CDroid+Serif:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,900" rel="stylesheet">
@@ -91,126 +91,135 @@
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Tshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Tshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item large">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-2.jpg" alt=""><a class="" href="#"><i class=""></i></a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                   <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
-                            <div class="grid-item__content-wrapper">
+                        <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail">
+                                        <div class="ps-badge ps-badge--new"><span>SOLD OUT</span></div><img src="images/shop/Tshirt-8.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="grid-item">
-                            <div class="grid-item__content-wrapper">
+                          <div class="grid-item">
+                        <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail">
+                                        <div class="ps-badge ps-badge--new"><span>SOLD OUT</span></div><img src="images/shop/Tshirt-9.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Leather brown belt</a><span class="ps-product__price">$1250.00</span></div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                        <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
                         </div>
@@ -223,12 +232,10 @@
     <div class="ps-subscribe--2 bg--cover" data-background="images/background/subscribe-2.jpg">
         <div class="container">
             <form class="ps-form--subscribe-2" action="do_action" method="post">
-                <h3 class="ps-heading">Get 15% Off Your Next Order</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed fermentum nibh,
-                    <br> vel aliquet massa. Etiam in magna id risus lacinia luctus eget eu est.</p>
+                <h3 class="ps-heading">Not a Boozehound</h3>
+                <p>Depressed But Well Dressed 
+                    <br> We ship worldwide✈️ - EST .2019</p>
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Your Email Address">
-                    <button class="ps-btn">Sign up now</button>
                 </div>
             </form>
         </div>
@@ -238,23 +245,23 @@
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-footer__copyright">
-                        <p>Copyright &copy; Exists Theme</p>
+                        <p>Copyright &copy; BOOZOŃ 2020</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__nav">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__social">
-                        <li><a href=""><i class="fa fa-facebook"></i>facebook</a></li>
-                        <li><a href=""><i class="fa fa-twitter"></i>twitter</a></li>
-                        <li><a href=""><i class="fa fa-instagram"></i>instagram</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-facebook"></i>facebook</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-twitter"></i>twitter</a></li>
+                        <li><a href="https://www.instagram.com/booz.on/"><i class="fa fa-instagram"></i>instagram</a></li>
                     </ul>
                 </div>
             </div>
@@ -336,7 +343,7 @@
                                     <div class="form-group form-group--number">
                                         <input class="form-control" type="text" value="1"><span class="down">-</span><span class="up">+</span>
                                     </div>
-                                    <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Add to cart</button>
+                                    <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Shop Now</button>
                                     <ul class="ps-product__cart-action">
                                         <li><a href="#"><i class="exist-heart"></i>Add to Whishlist</a></li>
                                         <li><a href="#"><i class="exist-compare"></i>Compare</a></li>
